--- a/facility.html
+++ b/facility.html
@@ -21,8 +21,8 @@
             <div class="navbar">
                 <ul class="navlinks">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Facilities</a></li>
-                    <li><a href="">Room</a></li>
+                    <li><a href="facility.html">Facilities</a></li>
+                    <li><a href="rooms.html">Room</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
             </div>
