--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
             <div class="navbar">
                 <ul class="navlinks">
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="facility.html">Facilities</a></li>
-                    <li><a href="">Room</a></li>
+                    <li><a href="rooms.html">Room</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
             </div>
