coded the contact section

--- a/contact.html
+++ b/contact.html
@@ -11,60 +11,52 @@
     <title>Hotel-webpage</title>
 </head>
 
-<!-- NAVBAR -->
-
 <body>
-
-
-    <!-- BACKGROUND IMAGE -->
-    <div class="background">
+    <div class="contact-heading">
         <div class="header">
             <div class="logo">
                 <p>OCHUKO LUXURY HOTEL</p>
             </div>
             <div class="navbar">
-                <ul class="navlinks">
-                    <li><a href="index.html">Home</a></li>
+                <ul class="navlinks contact-navlinks">
+                    <li class="lilili"><a href="index.html">Home</a></li>
                     <li><a href="facility.html">Facilities</a></li>
                     <li><a href="rooms.html">Room</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
-        <div class="background-content">
-            <h1>OCHUKO LUXURY HOTEL</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quam voluptatem provident perspiciatis eum, ab reiciendis
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-        </div>
-        <button class="btn">BOOK NOW</button>
+        <h1 class="margin-down">CONTACT US</h1>
+        <div class="straight-line"></div>
     </div>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <!-- CONTAINER CONTENT -->
-    <div class="container content">
-        <div class="line"></div>
-        <div class="parrag">
-            <h2>Modern Reception</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quam voluptatem provident perspiciatis eum, ab reiciendis</p>
-            <button class="btn">EXPLORE</button>
+    <div class="container contact-container">
+        <h1>WE ARE HERE FOR YOU</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laudantium
+            a explicabo aliquam accusamus
+            quisquam veritatis eos beatae molestiae voluptate, rem nemo ipsa asperiores
+            deserunt ad harum voluptas
+            voluptatum exercitationem.</p>
+
+        <div class="container-flex-contact">
+            <div class="container-flex-left">
+                <p>NO8 Wijo Street, Off Akpajo/Elelewon Axis. 306903JB</p>
+                <p>080 00 000 000</p>
+                <p>Email: ochukohotel867@gmail.com</p>
+            </div>
+
+            <form action="#" method="post">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit">SUBMIT</button>
+            </form>
         </div>
-        <img src="images/hotel.pic.02.jpg" alt="">
-        <div class="parrag">
-            <h2>Swimming Pool</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quam voluptatem provident perspiciatis eumr sit amet consectetur adipisicing elit.
-                Quam voluptatem provident perspiciatis eum,, ab reiciendis</p>
-            <button class="btn btn2">EXPLORE NOW</button>
-        </div>
-        <img src="images/hotel.pic.04.jpg" alt="">
-    </div>
-    <div class="container-flex">
-        <h4>Testimonials</h4>
-        <p>People from around the world have testified that our Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Molestias eius repellendus
-            ea, nemo eveniet ad, dolore error nihil officiis quas ratione non reiciendi</p>
     </div>
     <div class="straight-line"></div>
     <!-- FOOTER -->
@@ -98,8 +90,6 @@
         </div>
         <div class="straight-line2"></div>
     </div>
-
 </body>
-
 
 </html>
