--- a/facility.html
+++ b/facility.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="facility.html">Facilities</a></li>
                     <li><a href="rooms.html">Room</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
